# netflix_backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml
src/: handlers.rs  main.rs  models.rs  state.rs
