[package]
name = "netflix_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
dotenv = "0.15.0"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"]}
tower-http = { version = "0.6", features = ["cors", "fs"] }
